# contextforge-cli

./: .cursor-scratchpad  .cursor-template.xml  .cursorrules  .dockerignore  .gitignore  .opencommitignore  .pre-commit-config.yaml  IDEAS.md  Justfile  Makefile  README.md  RULESFORAI.md  cursorrules.md  cursorrules.xml  diff_to_xml.sh  logic-to-merge.md  mkdocs.yml  pyproject.toml  sweep.yaml  update_requirements.sh
.cursor/: filesystem-deps.md  lessons-learned.md  memories.md  multi-agent-scratchpad.md  project-requirements.md  scratchpad.md
.cursor/rules/: claude_pytest_system_prompt.mdc  devin-multi-agent-persona.mdc  devin-persona.mdc  documentations-inline-comments-changelog-docs.mdc
.devcontainer/: devcontainer.json
.github/: labeler.yml
.github/workflows/: main.yml
aider_configs/: aider_rules
docs/: REFERENCES.md
hack/: com.bossjones.cursor-update.plist
hack/devin.cursorrules/tools/: llm_api.py
hack/devin_cursorrules/tools/: plan_exec_llm.py  screenshot_utils.py  search_engine.py  search_engine_brave.py  token_tracker.py  web_scraper.py
hack/grammars/syntaxes/: mdc.tmLanguage.json
prompts/: article-generation.xml  claude-mcp-personal-settings.md  devin-multi-agent-persona.mdc.md  devin-persona.mdc.md  devin-rules.md  guidelines_to_create_mdc_rules.mdc.md  metaprompt.xml  multi-agent.md  pairProgrammingSystem.xml
prompts/drafts/: README.md  brain-memories-lessons-learned-scratchpad.mdc.md  claude_pytest_system_prompt.mdc.md  cursorrules.md  devin-persona.mdc.md  guidelines_to_create_mdc_rules.mdc.md
scripts/: compare-diffs.sh  generate_for_claude_folder.sh  jekyll_run.sh  update-cursor-date.sh
src/contextforge_cli/: __init__.py  __main__.py  __version__.py  aio_settings.py  asynctyper.py  cli.py  constants.py  debugger.py  main.py  types.py
src/contextforge_cli/bot_logger/: __init__.py  logsetup.py
src/contextforge_cli/models/: __init__.py
src/contextforge_cli/models/cmds/: __init__.py
src/contextforge_cli/models/loggers/: __init__.py
src/contextforge_cli/shell/: __init__.py
src/contextforge_cli/subcommands/: __init__.py  ai_docs_cmd.py  async_cmd.py  dummy_cmd.py  migrate_rules_cmd.py
src/contextforge_cli/subcommands/migrate_rules/: cli.py  subcmd.py
src/contextforge_cli/subcommands/migrate_rules/exceptions/: validation.py
src/contextforge_cli/subcommands/migrate_rules/models/: __init__.py  annotations.py  context.py  frontmatter.py  validation.py
src/contextforge_cli/subcommands/migrate_rules/validators/: annotations.py  base.py  content.py  cross_refs.py  frontmatter.py  xml_tags.py
src/contextforge_cli/utils/: __init__.py  base.py  collections_io.py  duration_str.py  env.py  file_functions.py  file_operations.py  formatutil.py  globalfunctions.py  imgops.py  imitools.py  introspect.py  io.py  misc.py  naming.py  paths.py  repo_typing.py  shell.py  temporary_file.py  timer.py  unpickler.py  uuid.py  vidops.py  writer.py
src/contextforge_cli/utils/ai_docs_utils/: api.py  extract_repo.py  generate_docs.py
src/contextforge_cli/utils/retry/: __init__.py
tests/: conftest.py  fake_embeddings.py  test_logsetup.py  test_shell.py
tests/unittests/: test_cli.py
tests/unittests/subcommands/migrate_rules/: test_cli.py
tests/unittests/subcommands/migrate_rules/models/: test_validation.py
tests/unittests/subcommands/migrate_rules/validators/: test_annotations.py  test_base.py  test_content.py  test_cross_refs.py  test_frontmatter.py  test_xml_tags.py
